<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text">Login To Shoe App</string>
    <string name="email_label">Email</string>
    <string name="password_text">Password</string>
    <string name="txt_login">Sign In</string>
    <string name="txt_create_acc">Sign Up</string>
    <string name="txt_title_wellcome">Wellcome to shoe store</string>
    <string name="text_buy_shoe">You want to manage your shoes store. Please click the next button to begin</string>
    <string name="btn_next">Next</string>
    <string name="txt_step1">Step 1: Click button shoe list to go to shoe list</string>
    <string name="txt_step2">Step 2: Select shoe to go to page shoe detail</string>
    <string name="txt_step3">Step 3: Click button add shoe for add new shoe</string>
    <string name="btn_go_to_show">GO TO LIST SHOE</string>
    <string name="name">Name: </string>
    <string name="company_name">Company name: </string>
    <string name="size">Shoe size: </string>
    <string name="description">Description : </string>
    <string name="txt_title">Create New Shoe</string>
    <string name="txt_company">Company</string>
    <string name="txt_size">Size</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_create">Save</string>
    <string name="txt_shoe_store">Shoe Store</string>
</resources>
