<?xml version="1.0" encoding="utf-8"?>
<!-- Using linear layout to welcome page
     it make element display vertical-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WellcomeFragment"
    android:orientation="vertical"
   >

    <ImageView
        android:id="@+id/img_wellcome"
        android:layout_width="match_parent"
        android:layout_height="378dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/shoe_store" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_title_wellcome"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_buy_shoe"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="18sp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/btn_next"
        android:layout_gravity="center"
        android:background="@drawable/btn_shap_rectangle"/>

</LinearLayout>